package application

// Event

type Event any
