@startuml C4-UserRegistration-Application

package "User Registration Application" << Rectangle >> {

    interface Event {}
    interface Command {}
    interface CommandResult {}

    interface CommandHandler {
        + Handle(Command) CommandResult
    }

    interface UserRegistrationRepository {
        + Add(userRegistration: UserRegistration): void
        + Load(id: UserRegistrationID): UserRegistration
        + Update(userRegistration: UserRegistration): void
    }

    interface UniqueEmailVerifier {
        + IsUnique(email: UserRegistrationEmail): boolean
    }

    class UserEmailMustBeUniqueError {}

    interface PasswordHasher {
        + Hash(password: string): string
    }

    class RegisterNewUserCommand implements Command {
        + string FirstName
        + string LastName
        + string Email
        + string Password
    }

    class RegisterNewUserCommandHandler implements CommandHandler {
        + Handle(command: RegisterNewUserCommand): CommandResult
    }

    class ConfirmUserRegistrationCommand implements Command {
        + UserRegistrationID ID
    }

    class ConfirmUserRegistrationCommandHandler implements CommandHandler {
        + Handle(command: ConfirmUserRegistrationCommand): CommandResult
    }

    class GetWaitingForConfirmationUserRegistationsQuery {}

    class UserRegistrationView {
        + string ID
        + string FirstName
        + string LastName
        + string Email
        + string Status
        + datetime RegistrationDate
    }

    interface UserRegistrationReadModel {
        + GetWaitingForConfirmationUserRegistations(GetWaitingForConfirmationUserRegistationsQuery): UserRegistrationView[]
    }

    RegisterNewUserCommandHandler -- UniqueEmailVerifier: uses >
    UniqueEmailVerifier -- UserEmailMustBeUniqueError : throws >
    RegisterNewUserCommandHandler -- PasswordHasher: uses >
    RegisterNewUserCommandHandler -- UserRegistrationRepository: adds UserRegistration >

    ConfirmUserRegistrationCommandHandler -- UserRegistrationRepository: updates UserRegistration >

}

@enduml
